<resources>
    <string name="app_name">L Tweaks</string>
    <string name="app_summary">Little tweaks for Android apps, if you like it, then use it</string>
    <string name="app_about">About</string>
    <string name="app_about_summary">
\"L Tweaks\" is my little tweaks for some Android apps, Xposed is needed for most functions.\n
\n
You need restart app / system to let it work, after changing settings.\n
\n
Open source on github: \n
<a href="https://github.com/bluesky139/LTweaks">https://github.com/bluesky139/LTweaks</a>
    </string>
    <string name="app_send_log">Send Log</string>
    <string name="app_send_log_error">Send log error.</string>
    <string name="app_retry_after_permission_granted">Retry after permission granted.</string>
    <string name="app_save_log">Save Log</string>
    <string name="app_save_log_ok">Log is saved to %s</string>
    <string name="app_save_log_error">Save log error.</string>
    <string name="app_open_log">Open Log</string>
    <string name="app_send_mail">Send Mail</string>
    <string name="app_send_mail_description">Please describe what you did, and what happened.\nAlso attach some screenshot if possible.</string>
    <string name="app_send_to">Send To...</string>
    <string name="app_ok">OK</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_close">Close</string>
    <string name="app_delete">Delete</string>
    <string name="app_shortcut_is_created">Shortcut is created.</string>
    <string name="app_submit_issue">Submit Issue</string>
    <string name="app_error_check_mode_world_readable">Starting from Android 7.0, store mode of preferences is changed, you need enable this module in Xposed Installer and reboot once first</string>
    <string name="app_kill_hint">%s is killed.</string>
    <string name="uninstall_message">Detected \"%s\" is installed, it has become part of \"L Tweaks\", better to uninstall it.</string>
    <string name="uninstall_confirm">Uninstall</string>
    <string name="not_supported">Not supported.</string>
    <string name="cant_read_file">Can\'t read file.</string>
    <string name="request_failed">Request failed.</string>
    <string name="upload_failed">Upload failed.</string>
    <string name="error">Error.</string>
    <string name="all">All</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="list">List</string>
    <string name="current">Current</string>
    <string name="secure_lock_screen_not_setup">Secure lock screen hasn\'t set up.</string>
    <string name="pref_header_google">Google</string>
    <string name="pref_category_google_play_services">Google Play Services</string>
    <string name="pref_google_dismiss_location_checker">Dismiss location settings checker</string>
    <string name="pref_google_dismiss_location_checker_summary">Dismiss dialog \"To continue, let your device turn on location using Google\'s location service.\"</string>
    <string name="pref_google_block_system_update_notification">Block system update notificaton</string>
    <string name="pref_category_google">Google Search App</string>
    <string name="pref_google_remove_bottom_bar">Remove bottom bar</string>
    <string name="pref_google_remove_bottom_bar_summary">Put them into drawer menu</string>
    <string name="pref_google_com_domain">Use google.com to search</string>
    <string name="pref_google_com_domain_summary">Not local domain, eg: google.com.hk</string>
    <string name="pref_google_keyboard_suggestion">Allow keyboard suggestions in search box</string>
    <string name="pref_google_overlay_search_to_browser">Overlay search go to browser</string>
    <string name="pref_google_overlay_search_to_browser_summary">In nova launcher or some other launcher, there\'s an option \"Search as overlay\", use browser to open search result with this option</string>
    <string name="pref_category_google_plus">Google+</string>
    <string name="pref_google_plus_remove_bottom_bar">Remove bottom bar</string>
    <string name="pref_google_plus_remove_bottom_bar_summary">Put them into drawer menu</string>
    <string name="pref_google_plus_top_right_refresh">Put \"New posts\" to top right menu</string>
    <string name="pref_google_plus_hide_comment_edit">Hide comment edit box</string>
    <string name="pref_google_plus_hide_comment_edit_summary">Replace by floating button</string>
    <string name="pref_google_plus_no_redirect">Url no redirect</string>
    <string name="pref_google_plus_no_redirect_summary">Remove \"http://plus.url.google.com/url?q=\"</string>
    <string name="pref_category_google_photos">Google Photos</string>
    <string name="pref_google_photos_remove_bottom_bar">Remove bottom bar</string>
    <string name="pref_google_photos_remove_bottom_bar_summary">Put them into drawer menu</string>
    <string name="pref_category_google_newsstand">Google Newsstand</string>
    <string name="pref_google_newsstand_remove_bottom_bar">Remove bottom bar</string>
    <string name="pref_google_newsstand_remove_bottom_bar_summary">Put them into drawer menu</string>
    <string name="pref_category_google_books">Google Play Books</string>
    <string name="pref_google_books_remove_bottom_bar">Remove bottom bar</string>
    <string name="pref_google_books_remove_bottom_bar_summary">Put them into drawer menu</string>
    <string name="pref_category_google_play">Google Play</string>
    <string name="pref_google_play_view_in_coolapk">Add menu \"View in CoolApk / ApkPure / Mobilism / App Info\"</string>
    <string name="pref_google_play_view_in_coolapk_summary">Jump to CoolApk / ApkPure, just like jump to Google Play from CoolApk, search in Mobilism, jump to App Info page of system</string>
    <string name="pref_category_google_messenger">Google Messenger</string>
    <string name="pref_google_messenger_disable_direct_share">Disable direct share</string>
    <string name="pref_google_messenger_disable_direct_share_summary">For Android 6.0+</string>
    <string name="pref_category_chrome">Chrome</string>
    <string name="pref_chrome_incognito_search">Search / Open in incognito</string>
    <string name="pref_chrome_incognito_search_summary">Search in incognito with selected text, use floating menu with text selection, for Android 6.0+\nMenu \"Open in incognito\" in Chrome and Custom Tab\nLong click link menu \"Open in incognito\" in Custom Tab</string>
    <string name="pref_chrome_google_cache">View Google cached webpage</string>
    <string name="pref_chrome_google_cache_summary">Menu \"View Google cached\" in Chrome and Custom Tab</string>
    <string name="pref_chrome_wayback">Wayback Machine</string>
    <string name="pref_chrome_wayback_summary">Menu \"Wayback Machine\" in Chrome and Custom Tab</string>
    <string name="pref_chrome_go_top_or_bottom">Go top or bottom</string>
    <string name="pref_chrome_go_top_or_bottom_summary">Menu \"Go Top\" and \"Go Bottom\" in Chrome and Custom Tab</string>
    <string name="pref_chrome_open_with">Open with...</string>
    <string name="pref_chrome_open_with_summary">Open url by other supported apps</string>
    <string name="pref_chrome_ip_info">IP info</string>
    <string name="pref_chrome_ip_info_summary">Menu to lookup ip info of current website</string>
    <string name="pref_category_youtube">Youtube</string>
    <string name="pref_youtube_remove_bottom_bar">Remove bottom bar</string>
    <string name="pref_youtube_remove_bottom_bar_summary">Put them into drawer menu</string>
    <string name="pref_youtube_set_quality">Automatically set quality</string>
    <string-array name="youtube_quality_string">
        <item>Auto</item>
        <item>144p</item>
        <item>240p</item>
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>1440p</item>
        <item>2160p</item>
        <item>4320p</item>
    </string-array>
    <string-array name="youtube_quality_int" translatable="false">
        <item>0</item>
        <item>144</item>
        <item>240</item>
        <item>360</item>
        <item>480</item>
        <item>720</item>
        <item>1080</item>
        <item>1440</item>
        <item>2160</item>
        <item>4320</item>
    </string-array>
    <string name="google_play_view_in_coolapk">View in CoolApk</string>
    <string name="google_play_view_in_apkpure">View in ApkPure</string>
    <string name="google_play_search_in_mobilism">Search in Mobilism</string>
    <string name="google_play_search_in_apkmirror">Search in ApkMirror</string>
    <string name="google_play_view_in_app_info">View in App Info</string>
    <string name="chrome_open_in_incognito">Open in Incognito</string>
    <string name="chrome_google_cache">View Google Cache</string>
    <string name="chrome_wayback_machine">Wayback Machine</string>
    <string name="chrome_go_top">Go Top</string>
    <string name="chrome_go_bottom">Go Bottom</string>
    <string name="chrome_open_with">Open With...</string>
    <string name="chrome_ip_info">IP Info</string>
    <string name="chrome_ip_domain">Domain</string>
    <string name="pref_header_shopping">Shopping</string>
    <string name="pref_category_jd">JD</string>
    <string name="pref_jd_open_link_in_app">Open link in app</string>
    <string name="pref_jd_open_link_in_app_summary">eg. http://item.jd.com/123.html</string>
    <string name="pref_jd_share_item">Share product by \"System Share\"</string>
    <string name="pref_jd_share_item_summary">Use \"Copy To Clipboard\" in app share menu, a button will appear for you</string>
    <string name="pref_jd_history">Price history in share menu</string>
    <string name="pref_jd_history_summary">Use with above share function</string>
    <string name="pref_jd_basic_share_activity">Original share activity</string>
    <string name="pref_jd_basic_share_activity_summary">Not something like \"Share Reward\", in case no \"Copy Link\" button</string>
    <string name="pref_category_suning">Suning</string>
    <string name="pref_suning_share_item">Share product by \"System Share\"</string>
    <string name="pref_suning_share_item_summary">Use \"Copy To Clipboard\" in app share menu, a button will appear for you</string>
    <string name="pref_suning_history">Price history in share menu</string>
    <string name="pref_suning_history_summary">Use with above share function</string>
    <string name="pref_category_smzdm">SMZDM</string>
    <string name="pref_smzdm_open_link_in_jd_app">Open link in JD app</string>
    <string name="pref_smzdm_open_link_in_jd_app_summary">Of course only for JD link</string>
    <string name="pref_header_entertainment">Entertainment</string>
    <string name="pref_header_system">System / Tools</string>
    <string name="pref_category_text_aide">Text Aide</string>
    <string name="pref_text_aide_open_youdao">Use Youdao dict</string>
    <string name="pref_category_youdao">Youdao Dict</string>
    <string name="pref_youdao_quick_query_shortcut">Create shortcut for quick query</string>
    <string name="pref_youdao_quick_query_shortcut_summary">Activity for word query, nothing more</string>
    <string name="pref_category_system_share">System Share</string>
    <string name="pref_system_share_qrcode_scan">Add menu \"Scan QR Code\"</string>
    <string name="pref_system_share_qrcode_scan_summary">You can share QR image from browser, local file or screenshot</string>
    <string name="pref_system_share_image_search">Add menu \"Search by image\"</string>
    <string name="pref_system_share_image_search_summary">You can share image from other app or local file, search engines include: Google, TinEye, IQDB</string>
    <string name="solid_explorer_url_replacer_dialog_instruction"></string>
    <string name="solid_explorer_url_replacer_dialog_instruction_from">Server:</string>
    <string name="solid_explorer_url_replacer_dialog_instruction_to">Replace To (eg: http://10.0.0.4/download):</string>
</resources>