<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_jd">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_jd_open_link_in_app"
            android:title="@string/pref_jd_open_link_in_app"
            android:summary="@string/pref_jd_open_link_in_app_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_jd_share_item"
            android:title="@string/pref_jd_share_item"
            android:summary="@string/pref_jd_share_item_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_jd_history"
            android:title="@string/pref_jd_history"
            android:summary="@string/pref_jd_history_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_jd_basic_share_activity"
            android:title="@string/pref_jd_basic_share_activity"
            android:summary="@string/pref_jd_basic_share_activity_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_suning">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_suning_share_item"
            android:title="@string/pref_suning_share_item"
            android:summary="@string/pref_suning_share_item_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_suning_history"
            android:title="@string/pref_suning_history"
            android:summary="@string/pref_suning_history_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_smzdm">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_smzdm_open_link_in_jd_app"
            android:title="@string/pref_smzdm_open_link_in_jd_app"
            android:summary="@string/pref_smzdm_open_link_in_jd_app_summary" />
    </PreferenceCategory>
</PreferenceScreen>
