<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_google">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_google_remove_bottom_bar"
            android:title="@string/pref_google_remove_bottom_bar"
            android:summary="@string/pref_google_remove_bottom_bar_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_google_plus">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_google_plus_remove_bottom_bar"
            android:title="@string/pref_google_plus_remove_bottom_bar"
            android:summary="@string/pref_google_plus_remove_bottom_bar_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_google_photos">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_google_photos_remove_bottom_bar"
            android:title="@string/pref_google_photos_remove_bottom_bar"
            android:summary="@string/pref_google_photos_remove_bottom_bar_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_google_play">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_google_play_view_in_coolapk"
            android:title="@string/pref_google_play_view_in_coolapk"
            android:summary="@string/pref_google_play_view_in_coolapk_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_google_messenger">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_google_messenger_disable_direct_share"
            android:title="@string/pref_google_messenger_disable_direct_share"
            android:summary="@string/pref_google_messenger_disable_direct_share_summary" />
    </PreferenceCategory>
</PreferenceScreen>
