<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_text_aide">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_text_aide_open_youdao"
            android:title="@string/pref_text_aide_open_youdao" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_youdao">
        <Preference
            android:key="@string/key_youdao_quick_query_shortcut"
            android:title="@string/pref_youdao_quick_query_shortcut"
            android:summary="@string/pref_youdao_quick_query_shortcut_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_system_share">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_system_share_qrcode_scan"
            android:title="@string/pref_system_share_qrcode_scan"
            android:summary="@string/pref_system_share_qrcode_scan_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_system_share_image_search"
            android:title="@string/pref_system_share_image_search"
            android:summary="@string/pref_system_share_image_search_summary" />
    </PreferenceCategory>
</PreferenceScreen>
